@@ -583,11 +583,11 @@ namespace libtorrent
 				}
 			}
 
-			// if the file already exists, but is larger than what
-			// it's supposed to be, truncate it
 			// if the file is empty and doesn't already exist, create it
-			if ((!ec && cached_size > files().file_size(file_index))
-				|| (files().file_size(file_index) == 0 && cached_size == stat_cache::no_exist))
+			// deliberately don't truncate files that already exist
+			// if a file is supposed to have size 0, but already exists, we will
+			// never truncate it to 0.
+			if (files().file_size(file_index) == 0 && cached_size == stat_cache::no_exist)
 			{
 				std::string file_path = files().file_path(file_index, m_save_path);
 				std::string dir = parent_path(file_path);
@@ -605,20 +605,16 @@ namespace libtorrent
 					}
 				}
 				ec.ec.clear();
+
+				// just creating the file is enough to make it zero-sized. If
+				// there's a race here and some other process truncates the file,
+				// it's not a problem, we won't access empty files ever again
 				file_handle f = open_file(file_index, file::read_write
 					| file::random_access, ec);
 				if (ec) return;
 
-				boost::int64_t const size = files().file_size(file_index);
-				f->set_size(size, ec.ec);
-				if (ec)
-				{
-					ec.file = file_index;
-					ec.operation = storage_error::fallocate;
-					break;
-				}
 				size_t const mtime = m_stat_cache.get_filetime(file_index);
-				m_stat_cache.set_cache(file_index, size, mtime);
+				m_stat_cache.set_cache(file_index, 0, mtime);
 			}
 			ec.ec.clear();
 		}
@@ -1544,7 +1540,7 @@ namespace libtorrent
 		}
 		TORRENT_ASSERT(h);
 
-		if (m_allocate_files && (mode & file::rw_mask) != file::read_only)
+		if ((mode & file::rw_mask) != file::read_only)
 		{
 			mutex::scoped_lock l(m_file_created_mutex);
 			if (m_file_created.size() != files().num_files())
@@ -1559,9 +1555,12 @@ namespace libtorrent
 			{
 				m_file_created.set_bit(file);
 				l.unlock();
-				error_code e;
+
+				// if we're allocating files or if the file exists and is greater
+				// than what it's supposed to be, truncate it to its correct size
 				boost::int64_t const size = files().file_size(file);
-				h->set_size(size, e);
+				error_code e;
+				bool const need_truncate = h->get_size(e) > size;
 				if (e)
 				{
 					ec.ec = e;
@@ -1569,7 +1568,19 @@ namespace libtorrent
 					ec.operation = storage_error::fallocate;
 					return h;
 				}
-				m_stat_cache.set_dirty(file);
+
+				if (m_allocate_files || need_truncate)
+				{
+					h->set_size(size, e);
+					if (e)
+					{
+						ec.ec = e;
+						ec.file = file;
+						ec.operation = storage_error::fallocate;
+						return h;
+					}
+					m_stat_cache.set_dirty(file);
+				}
 			}
 		}
 		return h;
