@@ -1,4 +1,5 @@
 
+	* defer truncating existing files until the first time we write to them
 	* fix issue when receiving a torrent with 0-sized padfiles as magnet link
 	* fix issue resuming 1.0.x downloads with a file priority 0
 	* fix torrent_status::next_announce
